--- a/oppo/index.html
+++ b/oppo/index.html
@@ -22,8 +22,8 @@
 			<div class="wrapper"></div>
 			<div style="width: 1200px;margin: 0 auto;height: 78px;">
 				<!--
-            	作者：husiqiang7603297@qq.com
-            	时间：2017-04-19
+            	作者：Lichoake@qq.com
+            	时间：2017-06-19
             	描述：logo
             -->
 				<div class="bottom-nav">
@@ -59,16 +59,16 @@
 						</ul>
 					</div>
 					<!--
-                        	作者：husiqiang7603297@qq.com
-                        	时间：2017-04-19
+                        	作者：Lichoake@qq.com
+                        	时间：2017-06-19
                         	描述：nav
                         -->
 				</div>
 			</div>
 		</header>
 		<!--
-        	作者：husiqiang7603297@qq.com
-        	时间：2017-04-20
+        	作者：Lichoake@qq.com
+        	时间：2017-06-20
         	描述：手机端
         -->
 		<header class="herder-shouji">
@@ -137,8 +137,8 @@
 		</header>
 
 		<!--
-        	作者：husiqiang7603297@qq.com
-        	时间：2017-04-20
+        	作者：Lichoake@qq.com
+        	时间：2017-06-20
         	描述：banner
         -->
 		<header id="et-slider-wrapper" class=" et_slider_auto et_slider_speed_7000">
@@ -283,8 +283,8 @@
 			</div>
 		</div>
 		<!--
-        	作者：husiqiang7603297@qq.com
-        	时间：2017-04-20
+        	作者：Lichoake@qq.com
+        	时间：2017-06-20
         	描述：lunbo
         -->
 
