--- a/oppo/mall.html
+++ b/oppo/mall.html
@@ -5,7 +5,7 @@
 		<title></title>
 		<meta charset="utf-8" />
 		<!--
-        	作者：370361529@qq.com
+        	作者：Lichoake@qq.com
         	时间：2017-04-19
         	描述：oppo 商城
         -->
